https://github.com/cloudstore/cloudstore/issues/105